--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 
 .title {
@@ -14,12 +14,53 @@
 }
 
 .jobs {
-  max-width: 1020px;
+  width: 1020px;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
 .job {
-  width: 33%;
+  width: 28%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
+  margin-bottom: 25px;
+}
+
+.title-job {
+  font-size: 30px;
+}
+
+.footer-job {
+  font-size: 18px;
+}
+.red {
+  border: 3px solid red;
+}
+.green {
+  border: 3px solid green;
+}
+.blue {
+  border: 3px solid blue;
+}
+.yellow {
+  border: 3px solid yellow;
+}
+footer {
+  font-size: 18px;
+  height: 60px;
+  background-color: #dddddd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
 }
