--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 /* Other rules */
+
+body {
+  font-family: "Roboto", sans-serif;
+}
 .header {
   background: black;
   height: 100px;
@@ -11,6 +15,7 @@
 .title {
   color: white;
   font-size: 40px;
+  font-weight: 700;
 }
 
 .jobs {
@@ -51,6 +56,7 @@
 
 .title-job {
   font-size: 30px;
+  font-weight: 700;
 }
 
 .footer-job {
